@@ -730,6 +730,16 @@ argument_list|,
 name|MAX_THREAD_NAME_LEN
 argument_list|)
 decl_stmt|;
+specifier|final
+name|Exception
+name|submitterStackTrace
+init|=
+operator|new
+name|Exception
+argument_list|(
+literal|"Submitter stack trace"
+argument_list|)
+decl_stmt|;
 name|super
 operator|.
 name|execute
@@ -824,6 +834,43 @@ name|run
 argument_list|()
 expr_stmt|;
 block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+if|if
+condition|(
+name|t
+operator|instanceof
+name|OutOfMemoryError
+condition|)
+block|{
+throw|throw
+name|t
+throw|;
+block|}
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Uncaught exception {} thrown by thread: {}"
+argument_list|,
+name|t
+argument_list|,
+name|currentThread
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|submitterStackTrace
+argument_list|)
+expr_stmt|;
+throw|throw
+name|t
+throw|;
+block|}
 finally|finally
 block|{
 if|if
@@ -831,6 +878,12 @@ condition|(
 name|threadContext
 operator|!=
 literal|null
+operator|&&
+operator|!
+name|threadContext
+operator|.
+name|isEmpty
+argument_list|()
 condition|)
 block|{
 name|MDC
